fix layout bugs, attempt fix font

--- a/css/dart-styles.css
+++ b/css/dart-styles.css
@@ -1,14 +1,16 @@
 
 body{
   background-color: #171717;
-  overflow: hidden;
+}
 
+#dart349-body{
+  overflow: hidden;
 }
 
 .content{
   margin: auto;
   display: grid;
-  grid-template-rows: 1fr 2fr;
+  grid-template-rows: minmax(0,1fr) 2fr 2fr 2fr 2fr 2fr;
   justify-content: center;
   box-sizing: border-box;
   width: 90%;
@@ -18,9 +20,16 @@ body{
   font-size: 25px;
 }
 
+.text-container{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
 #description{
   color: white;
   text-align: justify;
+  margin-bottom: 10%;
 }
 
 .assignment-cards a {
@@ -35,14 +44,27 @@ body{
   text-align: center;
 }
 
-.assignment-cards{
-  margin-bottom: 10%;
-}
 
 /* MIDTERM PROPOSAL PAGE--------------------------------------------------------*/
 
+.content-proposal{
+  margin: auto;
+  display: grid;
+  justify-content: center;
+  box-sizing: border-box;
+  width: 90%;
+  height: 80vh;
+  font-family: raleway;
+  font-size: 25px;
+}
+
+#description-proposal{
+  margin-top: 5%;
+  color: white;
+  text-align: justify;
+}
+
 .grid-container{
-  padding-top: 5%;
   display: grid;
   grid-template-columns: 1fr 1fr 1fr;
   justify-content: center;
@@ -53,8 +75,6 @@ body{
   animation: wobble-hor-bottom 2.5s infinite;
 
 }
-
-
 /* ----------------------------------------------
  * Generated by Animista on 2022-12-1 13:29:20
  * Licensed under FreeBSD License.
