--- a/css/main-styles.css
+++ b/css/main-styles.css
@@ -12,7 +12,7 @@
 
 @font-face {
   font-family: "alegreya";
-  src: url("../fonts/AlegreyaSansSC-thin.ttf");
+  src: url("../fonts/AlegreyaSansSC-Thin.ttf");
 }
 
 @font-face {
